langtools/test/tools/javac/NonStaticFieldExpr2.out
NonStaticFieldExpr2.java:14:33: compiler.err.non-static.cant.be.ref: (- compiler.misc.kindname.variable), x
1 error
